<resources>
    <string name="app_name">ClubApplication</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="member_toString"></string>
    <string name="firstNameLabel">First Name:</string>
    <string name="secondNameLabel">Second Name:</string>
    <string name="surNameLabel">Sur Name:</string>
    <string name="save">Save</string>
    <string name="add_member_activity">Add Member</string>
    <string name="add_facility_activity">Add Facility</string>
    <string name="facilityNameLabel">Facility Name:</string>
    <string name="facilityDescriptionLabel">Facility Description:</string>
</resources>
