<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iss.nus.clubapplication.AddFacilityActivity"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facilityNameLabel"
        android:id="@+id/facilityNameLabelId"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/facilityName"
        android:ems="10"
        android:maxEms="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/facilityNameLabel"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facilityDescriptionLabel"
        android:id="@+id/facilityDescriptionLabelId"
        android:textSize="25sp"

        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/facilityDescription"
        android:ems="10"
        android:maxEms="50"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/facilityDescriptionLabel"
        android:textSize="30sp"/>
    <Button
        android:text="@string/save"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/btnSave"
        android:layout_gravity="center"
        />

</LinearLayout>
